# activityrecorder

./: .gitignore  CMakeLists.txt  README.md  activitychecker.cpp  activitychecker.h  activityrecorder.pro  activityrecorder.sln  activityrecorder.vcxproj  activityrecorder.vcxproj.filters  mainwindow.cpp  mainwindow.h  mainwindow.ui  process.cpp  process.h  readme_et.md  resources.qrc  ui_mainwindow.h
doc/: filestructure.md
src/: entry.cpp  entry.h  file.cpp  file.h  filedata.cpp  filedata.h  filedatainfowindow.cpp  filedatainfowindow.h  filedatainfowindow.ui  infowindow.cpp  infowindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  process.cpp  process.h  processinfo.cpp  processinfo.h
src/tracking/: entry.cpp  entry.h  file.cpp  file.h  filedata.cpp  filedata.h  process.cpp  process.h  processinfo.cpp
src/ui/: filedatainfowindow.h  infowindow.cpp  infowindow.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  statistics.cpp  statistics.h
